added zones management pages

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jose": "^6.1.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "libphonenumber-js": "^1.12.26",
     "lucide-react": "^0.546.0",
     "next": "16.0.0",
@@ -34,6 +35,8 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
     "react-international-phone": "^4.6.0",
+    "react-leaflet": "^5.0.0",
+    "recharts": "^3.5.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
@@ -41,6 +44,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/js-cookie": "^3.0.6",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
