--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-international-phone": "^4.6.0",
     "react-leaflet": "^5.0.0",
     "recharts": "^3.5.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
