--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-google-maps/api": "^2.20.8",
+    "@react-pdf/renderer": "^4.3.2",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^12.7.0",
     "framer-motion": "^12.23.24",
+    "html2canvas": "^1.4.1",
     "jose": "^6.1.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "libphonenumber-js": "^1.12.26",
